syntax = "proto3";

option go_package = "https://github.com/atiaitu/Distributed_Systems/tree/main/Handin4/proto";

package proto;

service PeerToPeer {
    rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string content = 1;
    string sender_port = 2;
    string receiverPort = 3;
}

message MessageResponse {
    string reply = 1;
}
